--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"express": "*",
 		"ejs": "*",
 		"wechat": "*",
+		"redis": "*",
 		"wechat-api": "*",
 		"body-parser": "*",
 		"mongoose": "*",
